Rwinsteps (2011-08-31)

  o Initial release on CRAN