@@ -1,7 +1,7 @@
-ac856d1820f5280d6230dc2479f9953f *DESCRIPTION
+3af4cd81c7e5c31dc64c16c6c7a5d685 *DESCRIPTION
 f8b8d46b64b3d25e5ee912391c93d0eb *LICENSE
 42da54c6d22d65f5486975dc53971181 *NAMESPACE
-88843f708259d1cf25aa93e485404a95 *NEWS
+8d7025a30d4f173df486c8484f416f27 *NEWS
 3dd5e36212c1abf8839d2731edc64ba8 *R/as.ifile.R
 81f60b776672a97170ed98b865d6684b *R/as.pfile.R
 c4e16c7a1216307364a9ffacd942a214 *R/as.wcmd.R
@@ -12,7 +12,7 @@ c1221ba9476b3847d764efb6fd0c9bab *R/lines.rief.R
 df7c2d5fce99dea096aa630acbc77699 *R/lines.riif.R
 8c771263ba1d6b6d7bd9e96ecb9d6cea *R/lines.rirf.R
 66ffc0a9d46be6bba439df48844323a7 *R/pfile.R
-3c34cb67a561fec1de2bda99073ceae2 *R/plot.ifile.R
+014aee08bfad76a4aefef7edf01ed4d9 *R/plot.ifile.R
 27d8b9d9e42368a7bbd917e2eb9809d7 *R/plot.rief.R
 50970255bfd3f0408a5edd3a76e44e26 *R/plot.riif.R
 30bd3ee8c0cfbb18434c17a504cebd9b *R/plot.rirf.R
@@ -20,17 +20,17 @@ debbfce2f75e3e422b83a6d972a7e131 *R/plot.rtef.R
 15bf56e2bcec4da49bf17d432e78adb1 *R/plot.rtif.R
 70e763af4f40b73ccfa13d433c4995b9 *R/plot.rtrf.R
 a4fa8292819d263509417b0748ed3fd3 *R/print.wcmd.R
-6d7ae991590dad184fb93af94de1949c *R/print.winsteps.R
-0aaefa96605a6fe769e1bec2a064daa7 *R/read.ifile.R
-50a0a21c160cc5a5231d0d1e02639c69 *R/read.pfile.R
-c1b76a3b50212dc083225e2af8f22776 *R/read.wcmd.R
+f6651e00b00729b8107b54770fd23776 *R/print.winsteps.R
+7f3ad460104023145cd915167f0e1eb5 *R/read.ifile.R
+3ef61e0d7972fb9ec474e58fae6eb14f *R/read.pfile.R
+1adedebb33483773ff3a7906b4c764f4 *R/read.wcmd.R
 80d3320a805176e1bde0d702f25b4146 *R/read.wdat.R
 0ace347576d22b3284a7bee51abd8103 *R/rief.R
 4e1639186b5ba80aad0c5aaa9de75771 *R/riif.R
 a096ad5dc9655746264be51a64a51e8c *R/rirf.R
-5b1a93b3cef2ae403745f6efc5a1601a *R/rtef.R
-72600f064b377910d3fa995a33ebeb34 *R/rtif.R
-ca703483c830b5cec87f824b2219a9cb *R/rtrf.R
+74366c39809ccda7e209316e665c49ff *R/rtef.R
+157b596d23082d29158b03fde148af55 *R/rtif.R
+b79d38bbbd4f293f9ef6e89c3af4c2cf *R/rtrf.R
 e89fc7ffffd241f0d5055405f93da949 *R/trim.R
 cb1882f67288105c2e2dbaabf155614b *R/varcheck.R
 a5689cfb2a936cfaeaa0a742f56a695d *R/wcmd.R
@@ -38,9 +38,9 @@ a5689cfb2a936cfaeaa0a742f56a695d *R/wcmd.R
 773622dc00ef884ad32e9d037a6a68c0 *R/write.wcmd.R
 edce68c94e0c40e5aae9ac9e0813d497 *R/write.wdat.R
 ae0ab20b131e170d5ca7ab401465b9e0 *man/Rwinsteps-internal.Rd
-e1b5fedfb997e768438f04f94c0e4347 *man/Rwinsteps-package.Rd
-0751e2499e1e18d5ebed63596009549d *man/ifile.Rd
-04d1629a0d5078c535a1c25a1e9cdfa3 *man/plot.ifile.Rd
+0d13731dc1744c000b8d61d76932bf60 *man/Rwinsteps-package.Rd
+b5e02c531197e605591eda271fa68cd7 *man/ifile.Rd
+288f2982dbf64cda443ce23a470214ff *man/plot.ifile.Rd
 922edd9037c09d395e476b9ba3443b08 *man/rirf.Rd
 8546e5fdd07c446bfe32c62a284cc2ee *man/wcmd.Rd
 d607695ba2fedb9c8b2698d64f852e0a *man/wdat.Rd
